fix(agree-box): add inline-flex and correct spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -583,7 +583,7 @@ address {
  }
 
  .form-field {
-     margin-bottom: 16px;
+     margin-bottom: 8px;
  }
 
  .form-label {
@@ -704,7 +704,9 @@ address {
      border: 1px solid rgba(46, 47, 66, 0.4);
      border-radius: 2px;
      background-color: #fff;
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                 border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: transparent;
  }
 
